# football-api-pipeline

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
football_api_pipeline/models/football/: players.py  transfers.py
football_api_pipeline/services/: api.py
football_api_pipeline/utils/: flatten.py  logger.py
tests/: test_foo.py  test_run_api_query.py
