[project]
name = "football-api-pipeline"
version = "0.0.1"
description = "pipeline that extract football raw data from api"
authors = [{ name = "Serge Kouonche", email = "sergeleonel@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12"
dependencies = [
    "pyspark==3.5.1",
    "duckdb~=1.2.1",
    "jupyter",
    "duckdb~=1.2.1",
    "pandas~=2.2.3",
    "boto3",
    "pyathena",
    "pyarrow",
    "pytest",
    "jupyter",
    "pydantic"
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://kksl-07.github.io/football-api-pipeline/"
Repository = "https://github.com/kksl-07/football-api-pipeline"
Documentation = "https://kksl-07.github.io/football-api-pipeline/"

[dependency-groups]
dev = [
    "pytest~=8.3.3",
    "pytest_mock~=3.14.0",
    "pytest-cov~=6.0.0",
    "tox-uv~=1.16.0",
    "mypy~=1.13.0",
    "pre-commit~=4.0.0",
    "ruff~=0.8.0",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["football_api_pipeline"]

[tool.mypy]
files = ["football_api_pipeline"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["football_api_pipeline"]
